fix wrapping white-space, fix button width on mobile, adjust distance betreen input field create Klasse

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -55,7 +55,8 @@
 
   /* small screen */
   @media only screen and (max-width: 600px) {
-    font-size: $smallButtonFontSize;    
+    font-size: $smallButtonFontSize;
+    width: 100%;
   }
 
   /* medium screen */
