--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,7 +46,7 @@ body {
 }
 
 p {
-  white-space: pre;
+  white-space: normal;
   /* text-wrap needs to be placed after white-space to overwrite wrapping behaviour */
   text-wrap: pretty;
 }
